Petite avancée sur la page d'inscription, couleurs temporaires

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,3 +1,14 @@
+@font-face {
+  font-family: 'Ubuntu';
+  src: url('../fonts/Ubuntu-Regular.ttf');
+}
+
+$primary-color: #F57251;
+$secondary-color: #4F6D7A;
+$tertiary-color: #A13D63;
+$white: #F5F5F5;
+$black: #12100E;
+
 @mixin flex-center {
   display: flex;
   justify-content: center;
@@ -5,6 +16,7 @@
 }
 
 * {
+  font-family: "Ubuntu";
   margin: 0;
   padding: 0;
   box-sizing: border-box;
