--- a/front-end/src/components/identification-form/tab/tab.scss
+++ b/front-end/src/components/identification-form/tab/tab.scss
@@ -4,20 +4,18 @@
   width: 100%;
   @include flex-center;
   background: $white;
-  a {
-    text-decoration: none;
-    color: $black;
-    width: 100%;
-    @include flex-center;
-    &.active {
-        background: $primary-color;
-        color: $white;
-    }
+
+  .active {
+    background: $primary-color;
+    color: $white;
   }
-  .tab {
-    padding: 20px;
-    h3 {
-      text-transform: capitalize;
-    }
+}
+.tab {
+  @include flex-center;
+  cursor: pointer;
+  padding: 20px;
+  width: 100%;
+  h3 {
+    text-transform: capitalize;
   }
 }
