Amélioration de l'organisation des fichiers, et le système de state pour afficher connexion/ inscription est quasiment fonctionnel

--- a/front-end/src/components/IdentificationForm/Tabs/Tabs.scss
+++ b/front-end/src/components/IdentificationForm/Tabs/Tabs.scss
@@ -10,9 +10,8 @@
     color: $white;
   }
 }
-.tab {
+.tabs {
   @include flex-center;
-  cursor: pointer;
   padding: 20px;
   width: 100%;
   h3 {
