--- a/front-end/src/styles/settings.scss
+++ b/front-end/src/styles/settings.scss
@@ -7,6 +7,7 @@ $primary-color: #F57251;
 $secondary-color: #4F6D7A;
 $tertiary-color: #A13D63;
 $white: #F5F5F5;
+$grey: #eeeeee;
 $black: #12100E;
 
 @mixin flex-center {
