--- a/front-end/src/components/IdentificationForm/Input/Input.scss
+++ b/front-end/src/components/IdentificationForm/Input/Input.scss
@@ -4,7 +4,6 @@ form {
   margin-top: 20px;
   flex-direction: column;
   width: 100%;
-  background: yellow;
   .input-container {
     width: 100%;
     @include flex-center;
@@ -14,10 +13,14 @@ form {
       padding: 0 0 0 20px;
       margin: 10px 0;
       font-size: 1rem;
+      &:focus {
+        outline: none !important;
+        border: 1px solid $primary-color;
+        box-shadow: 0 0 3px $primary-color;
+      }
       &::placeholder {
-          font-size: 1rem;
+        font-size: 1rem;
       }
     }
   }
 }
-
