--- a/front-end/src/components/IdentificationForm/Link/Link.scss
+++ b/front-end/src/components/IdentificationForm/Link/Link.scss
@@ -1,7 +1,29 @@
+@import "../../../styles/settings.scss";
+
 .links {
   position: absolute;
   bottom: 20px; left: 20px;
   .link {
-    background: salmon;
+    padding: 3px 0;
+    cursor: pointer;
+    position: relative;
+    
+    &::after {
+      content: '';
+      transform-origin: 0 0; 
+      transform: scaleX(0);
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: .1em; 
+      background: $primary-color;
+      z-index: -1;
+      opacity: 0.8;
+      transition: transform cubic-bezier(.01,.22,.04,.99) 1s;
+    }
+    &:hover::after {
+      transform: scaleX(1);
+    }
   }
 }
