--- a/front-end/src/styles/settings.scss
+++ b/front-end/src/styles/settings.scss
@@ -6,6 +6,7 @@
 $primary-color: #F57251;
 $secondary-color: #4F6D7A;
 $tertiary-color: #A13D63;
+$pure-white: #FFFFFF;
 $white: #F5F5F5;
 $grey: #eeeeee;
 $black: #12100E;
