--- a/front-end/src/components/UI/Input/Input.scss
+++ b/front-end/src/components/UI/Input/Input.scss
@@ -3,6 +3,16 @@
 .input_container {
   width: 100%;
   @include flex-center;
+  flex-direction: column;
+  .icons_container {
+    width: 80%;
+    display: flex;
+    justify-content: flex-end;
+    svg {
+      margin: 0 5px;
+      font-size: 18px;
+    }
+  }
   input {
     width: 80%;
     height: 40px;
