Ajout de 'publications récentes'

--- a/front-end/src/pages/NewsFeed.scss
+++ b/front-end/src/pages/NewsFeed.scss
@@ -6,7 +6,8 @@
 }
 
 .container {
-    @include flex-center();
+    display: flex;
+    flex-direction: column;
     align-items: flex-start;
     width: 70%;
     max-width: 700px;
@@ -15,4 +16,8 @@
     padding: 10px;
     border-radius: 5px;
     border: solid 1px $black;
+    .publication__title {
+        text-transform: none;
+        padding: 15px 0;
+    }
 }
