--- a/front-end/src/components/UI/Input/Input.scss
+++ b/front-end/src/components/UI/Input/Input.scss
@@ -11,7 +11,7 @@
     svg {
       margin: 0 5px;
       font-size: 18px;
-      color: lighten($secondary-color, 10%)
+      color: darken($grey, 60%)
     }
   }
   input {
