--- a/front-end/src/pages/NewsFeed.scss
+++ b/front-end/src/pages/NewsFeed.scss
@@ -9,8 +9,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 70%;
-    max-width: 700px;
+    width: 80%;
+    max-width: 800px;
     background: lighten($secondary-color, 40%);
     padding: 10px;
     border-radius: 5px;
@@ -21,3 +21,12 @@
         color: $black;
     }
 }
+
+@media (max-width: 768px) {
+    .container {
+        width: 95%;
+        .publication__title {
+          
+        }
+    }
+  }
