--- a/front-end/src/components/IdentificationForm/Form/Form.scss
+++ b/front-end/src/components/IdentificationForm/Form/Form.scss
@@ -6,3 +6,20 @@ form {
   flex-direction: column;
   width: 100%;
 }
+
+
+input {
+  width: 80% !important;
+  height: 40px;
+  padding: 0 0 0 20px;
+  margin: 10px 0;
+  font-size: 1rem;
+  &:focus {
+    outline: none !important;
+    border: 1px solid $primary-color;
+    box-shadow: 0 0 3px $primary-color;
+  }
+  &::placeholder {
+    font-size: 1rem;
+  }
+}
