Vérification des données du formulaire en front, il reste a faire la vérif depuis le back et pareil pour la connexion

--- a/front-end/src/components/IdentificationForm/Form/Form.scss
+++ b/front-end/src/components/IdentificationForm/Form/Form.scss
@@ -5,6 +5,10 @@ form {
   margin-top: 20px;
   flex-direction: column;
   width: 100%;
+  .error {
+    color: red;
+    text-align: left;
+  }
 }
 
 
