Utilisation de localstorage etc, plein de trucs

--- a/front-end/src/components/header/header.scss
+++ b/front-end/src/components/header/header.scss
@@ -1,15 +1,21 @@
 @import "../../styles/settings.scss";
 
 header {
+  position: relative;
   height: 80px;
   @include flex-center;
   background: white;
-  width: 100% !important;
+  width: 800px !important;
+  max-width: 800px;
   margin-bottom: 80px;
   & a {
     height: 100%;
     & > img {
       height: 100%;
     }
+  }
+  .profil {
+    position: absolute;
+    right: 20px;
   }
 }
