--- a/front-end/src/components/IdentificationForm/Form/Form.scss
+++ b/front-end/src/components/IdentificationForm/Form/Form.scss
@@ -13,6 +13,12 @@ form {
     color: #2bb32b;
     font-size: 18px;
   }
+  ul {
+    list-style: none;
+  }
+  .password.infos {
+    text-align: left;
+  }
 }
 
 
