amélioration disposition name dans commentaire

--- a/front-end/src/components/Posts/Post/Comments/Comment.scss
+++ b/front-end/src/components/Posts/Post/Comments/Comment.scss
@@ -1,11 +1,19 @@
+@import "../../../../styles/settings.scss";
+
 .comment {
+    &__author-infos {
+        display: flex;
+    }
     border: 1px solid rgb(209, 209, 209);
     border-radius: 5px;
     padding: 10px 0;
     margin: 2px 0;
     background: rgb(238, 238, 238);
     &__author-id {
-
+        margin-right: 6px;
+    }
+    &__author-name {
+        margin-right: 4px;
     }
     &__date {
         font-size: 11px;
