--- a/front-end/src/components/Posts/Post/Comments/Comment.scss
+++ b/front-end/src/components/Posts/Post/Comments/Comment.scss
@@ -1,6 +1,7 @@
 @import "../../../../styles/settings.scss";
 
 .comment {
+    padding-left: 15px !important;
     &__author-infos {
         display: flex;
     }
