Amelioration du l'UI pour la page de connexion

--- a/front-end/src/components/IdentificationForm/Form/Form.scss
+++ b/front-end/src/components/IdentificationForm/Form/Form.scss
@@ -19,8 +19,10 @@ form {
   .password.infos {
     text-align: left;
   }
+  .login_error {
+    color: red;
+  }
 }
-
 
 input {
   width: 80% !important;
