correction du probleme du LS vide quand on va sur la page d'accueil

--- a/front-end/src/pages/EditProfil.scss
+++ b/front-end/src/pages/EditProfil.scss
@@ -1,3 +1,22 @@
+@import "../styles/settings.scss";
+
 .newsfeed {
+    @include flex-center;
+    flex-direction: column;
     pointer-events: none;
+    width: 100% !important;
+}
+
+.container__global {
+    width: 100%;
+    @include flex-center;
+    flex-direction: column;
+    margin-bottom: 50px;
+}
+
+.transparent {
+    width: 100%;
+    @include flex-center;
+    flex-direction: column;
+    margin-bottom: 50px;
 }
