--- a/front-end/src/components/UI/Trash/Trash.scss
+++ b/front-end/src/components/UI/Trash/Trash.scss
@@ -1,5 +1,12 @@
 .trash {
-    position: absolute;
-    right: 15px;
-    top: 15px;
+  position: absolute;
+  right: 15px;
+  top: 15px;
+	color: #f57251;
+	transition: .3s;
+  &:hover {
+    color: red;
+	transition: .3s;
+    cursor: pointer;
+  }
 }
